--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "clean": "npm-run-all clean:*",
     "clean:cache": "rimraf .cache",
     "clean:packages": "lerna run clean",
-    "test": "jest --config=jest.json"
+    "pretest": "npm run build",
+    "test": "jest --config=jest.config.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-typescript": "^7.9.0",
     "@types/jest": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
