--- a/packages/muta-codegen-cli/package.json
+++ b/packages/muta-codegen-cli/package.json
@@ -21,15 +21,19 @@
   "dependencies": {
     "@graphql-codegen/core": "^1.13.2",
     "@graphql-codegen/typescript": "^1.13.2",
-    "@types/lodash": "^4.14.149",
-    "@types/request": "^2.48.4",
-    "@types/request-promise": "^4.1.46",
+    "@types/fs-extra": "^8.1.0",
+    "@types/lodash": "^4.14.150",
+    "@types/node-fetch": "^2.5.7",
     "commander": "^5.0.0",
+    "fs-extra": "^9.0.0",
     "graphql": "^15.0.0",
     "graphql-codegen-plugin-mutasdk": "^0.0.1",
-    "handlebars": "^4.7.6",
     "lodash": "^4.17.15",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "muta-codegen-test": "^0.0.1",
+    "node-fetch": "^2.6.0",
+    "utility-types": "^3.10.0"
+  },
+  "devDependencies": {
+    "muta-codegen-test": "0.0.1"
   }
 }
