--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "bootstrap": "lerna run bootstrap",
-    "build": "tsc -b packages/*",
+    "build": "tsc -b",
     "clean": "npm-run-all clean:*",
     "clean:cache": "rimraf .cache",
     "clean:packages": "lerna run clean",
@@ -20,16 +20,15 @@
     "@types/jest": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
-    "babel-jest": "^25.2.6",
     "eslint": "^6.8.0",
     "husky": "^4.2.3",
-    "jest": "^25.2.7",
+    "jest": "^25.5.1",
     "lerna": "^3.20.2",
     "lint-staged": "^10.1.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
-    "ts-jest": "^25.3.1",
+    "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
   },
   "husky": {
