--- a/packages/graphql-codegen-plugin-mutasdk/package.json
+++ b/packages/graphql-codegen-plugin-mutasdk/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "^1.13.2",
     "handlebars": "^4.7.6",
+    "lodash": "^4.17.15",
     "muta-codegen-test": "^0.0.1"
   },
   "devDependencies": {
